# exapump

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  about.hbs  about.toml  deny.toml  install.sh
.claude/: settings.json
.github/workflows/: auto-tag.yml  ci.yml
.serena/: project.yml
docs/: bucketfs.md  build_from_source.md  configuration.md  file_exchange.md  index.md  sql_interaction.md
examples/: health_check.rs
scripts/: check.sh  generate-licenses.sh  integration-test.sh  wait-for-exasol.sh  wait_for_exasol.sh
specs/: .gitignore  decision-log.md  mission.md
specs/bucketfs/operations/: spec.md
specs/cli/bucketfs-command-structure/: spec.md
specs/cli/export-command-structure/: spec.md
specs/cli/help-and-version/: spec.md
specs/cli/interactive-command-structure/: spec.md
specs/cli/profile-command-structure/: spec.md
specs/cli/sql-command-structure/: spec.md
specs/cli/upload-command-structure/: spec.md
specs/config/profiles/: spec.md
specs/connection/dsn-resolution/: spec.md
specs/connection/shared-connection-args/: spec.md
specs/connection/transport/: spec.md
specs/export/csv-export/: spec.md
specs/export/parquet-export/: spec.md
specs/interactive/dot-commands/: spec.md
specs/interactive/execute-script-handling/: spec.md
specs/interactive/repl-loop/: spec.md
specs/interactive/table-output/: spec.md
specs/sql/error-handling/: spec.md
specs/sql/execution-flow/: spec.md
specs/sql/query-output/: spec.md
specs/upload/csv-import/: spec.md
specs/upload/parquet-import/: spec.md
src/: cli.rs  config.rs  connection.rs  format.rs  main.rs  size.rs  split.rs
src/commands/: bucketfs.rs  export.rs  interactive.rs  mod.rs  profile.rs  sql.rs  upload.rs
tests/: bucketfs_test.rs  cli_test.rs  csv_test.rs  env_test.rs  export_test.rs  health_check.rs  parquet_test.rs  profile_test.rs  transport_test.rs  upload_parquet_test.rs
tests/fixtures/: mod.rs
