[package]
name = "exapump"
version = "0.2.0"
edition = "2021"
description = "The simplest path from file to Exasol table — a single-binary CLI for CSV and Parquet ingest."
license = "MIT"
authors = ["Exasol Labs <labs@exasol.com>"]

[[bin]]
name = "exapump"
path = "src/main.rs"

[dependencies]
exarrow-rs = "0.6.0"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
dotenvy = "0.15"
arrow = "57"
arrow-csv = "57"
arrow-json = "57"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
arrow = "57"
parquet = "57"
tempfile = "3"
