[package]
name = "exapump"
version = "0.7.4"
edition = "2021"
description = "The simplest path from file to Exasol table — a single-binary CLI for CSV and Parquet ingest."
license = "MIT"
authors = ["Exasol Labs <labs@exasol.com>"]

[[bin]]
name = "exapump"
path = "src/main.rs"

[dependencies]
exarrow-rs = "0.7.3"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
dotenvy = "0.15"
arrow = "57"
arrow-csv = "57"
arrow-json = "57"
parquet = "57"
comfy-table = "7"
rustyline = "17"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
arrow = "57"
tempfile = "3"
base64 = "0.22"
